deployments/kubernetes/evrane-blog.depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evrane-blog-api
  labels:
    app: evrane-blog-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evrane-blog-api
  template:
    metadata:
      labels:
        app: evrane-blog-api
    spec:
      containers:
        - name: evrane-blog-api
          image: ghcr.io/yira97/evrane-blog-api:master
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: rsa-private-key
              mountPath: '/app/config/rsa-private-key'
            - name: rsa-public-key
              mountPath: '/app/config/rsa-public-key'
            - name: jwt-key
              mountPath: '/app/config/jwt-key'
      volumes:
        - name: rsa-private-key
          secret:
            secretName: rsa-key
            items:
              - key: private-key
                path: 'rsa-private-key.pem'
        - name: rsa-public-key
          secret:
            secretName: rsa-key
            items:
              - key: public-key
                path: 'rsa-public-key.pem'
        - name: jwt-key
          configMap:
            name: jwt
            items:
              - key: issuerKey
                path: 'jwt-key.pem'
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evrane-blog-admin
  labels:
    app: evrane-blog-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evrane-blog-admin
  template:
    metadata:
      labels:
        app: evrane-blog-admin
    spec:
      containers:
        - name: evrane-blog-admin
          image: ghcr.io/yira97/evrane-blog-admin:master
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: jwt-key
              mountPath: '/app/config'
      volumes:
        - name: jwt-key
          configMap:
            name: jwt
            items:
              - key: issuerKey
                path: 'jwt-key.pem'
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evrane-blog-web-yiran
  labels:
    app: evrane-blog-web-yiran
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evrane-blog-web-yiran
  template:
    metadata:
      labels:
        app: evrane-blog-web-yiran
    spec:
      containers:
        - name: evrane-blog-web
          image: ghcr.io/yira97/evrane-blog-web:master
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: jwt-key
              mountPath: '/app/config'
      volumes:
        - name: jwt-key
          configMap:
            name: jwt
            items:
              - key: issuerKey
                path: 'jwt-key.pem'
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evrane-blog-web-rockmoss
  labels:
    app: evrane-blog-web-rockmoss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evrane-blog-web-rockmoss
  template:
    metadata:
      labels:
        app: evrane-blog-web-rockmoss
    spec:
      containers:
        - name: evrane-blog-web
          image: ghcr.io/yira97/evrane-blog-web:master
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: jwt-key
              mountPath: '/app/config'
      volumes:
        - name: jwt-key
          configMap:
            name: jwt
            items:
              - key: issuerKey
                path: 'jwt-key.pem'
