deployments/kubernetes/evrane-blog.svc.yml
apiVersion: v1
kind: Service
metadata:
  name: evrane-blog-api
spec:
  type: NodePort
  selector:
    app: evrane-blog-api
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: evrane-blog-admin
spec:
  type: NodePort
  selector:
    app: evrane-blog-admin
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: evrane-blog-web-yiran
spec:
  type: NodePort
  selector:
    app: evrane-blog-web-yiran
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: evrane-blog-web-rockmoss
spec:
  type: NodePort
  selector:
    app: evrane-blog-web-rockmoss
  ports:
    - port: 80
      targetPort: 80
